--- a/deployments/api-feed-service.yaml
+++ b/deployments/api-feed-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
-metadata: 
-  name: backend-feed
+metadata:
   labels:
-    service: backend-feed
+    app: backend-feed
+  name: backend-feed
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
   selector:
-    service: backend-feed
+    app: backend-feed
