--- a/deployments/frontend-deployment.yaml
+++ b/deployments/frontend-deployment.yaml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    service: frontend
+    app: frontend
   name: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: frontend
+      app: frontend
   template:
     metadata:
       labels:
-        service: frontend
+        app: frontend
         api: external
     spec:
       serviceAccountName: default-sa
