--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,18 @@
-language: node_js
-node_js:
-  - 16
+language: minimal
 
-branches:
-  only:
-    - main
-    # - /^issue-.*$/
+services: docker
 
-services:
-  - docker
-
-# Pre-testing installs
 install:
   - echo "nothing needs to be installed"
 
-# Scripts to be run such as tests
 before_script:
   - echo "no tests"
 
 script:
-  - docker --version # print the version for logging
-  # Build and tag feed-api
-  - docker build -t udagram-api-feed ./udagram-api-feed
-  - docker tag udagram-api-feed anptt4/udagram-api-feed:v1
-  # Build and tag feed-api
-  - docker build -t udagram-api-user ./udagram-api-user
-  - docker tag udagram-api-user anptt4/udagram-api-user:v1
-  # Build and tag feed-api
-  - docker build -t udagram-frontend ./udagram-frontend
-  - docker tag udagram-frontend anptt4/udagram-frontend:v10
-  # Build and tag feed-api
-  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
-  - docker tag udagram-reverseproxy anptt4/udagram-reverseproxy:v1
-
-after_success:
+  - docker -v && docker-compose -v
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker-compose -f ./docker-compose-build.yaml build
+  - docker push anptt4/udagram-frontend:v1
   - docker push anptt4/udagram-api-feed:v1
   - docker push anptt4/udagram-api-user:v1
-  - docker push anptt4/udagram-frontend:v10
-  - docker push anptt4/udagram-reverseproxy:v1
+  - docker push anptt4/reverseproxy:v1
