--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,7 +3,7 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: anptt4/reverseproxy:v1
+    image: anptt4/udagram-reverseproxy:v1
   backend_user:
     build:
       context: ./udagram-api-user
