--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: anptt4/reverseproxy:v1
+      image: anptt4/udagram-reverseproxy:v1
       ports:
           - 8080:8080
       restart: always
