--- a/udagram-deployment/env-configmap.yaml
+++ b/udagram-deployment/env-configmap.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: my-358267272529-bucket
+  AWS_BUCKET: s3-proj3
   AWS_PROFILE: default
   AWS_REGION: us-east-1
   POSTGRES_DB: postgres
-  POSTGRES_HOST: database-2.cuv2rnclyij6.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: database-1.cuv2rnclyij6.us-east-1.rds.amazonaws.com
   URL: http://localhost:8100  
 metadata:
   name: env-config
