--- a/udagram-deployment/frontend-deployment.yaml
+++ b/udagram-deployment/frontend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         api: external        
     spec:
       containers:
-      - image: harvey99/udagram-frontend:v1
+      - image: anptt4/udagram-frontend:v1
         name: frontend
         imagePullPolicy: Always          
         ports:
